syntax = "proto3";
option go_package = "openline-ai/channels-api/ent/proto/";
import "common.proto";

message GmailCredential {
  string email = 1;
  string token = 2;
}

service GmailAuthTokenService {
  rpc setGmailAuth(GmailCredential) returns (EventEmpty) {};
}